Add Worker function finish white error handling , Remove worker Function

--- a/test1.in
+++ b/test1.in
@@ -27,3 +27,5 @@ Report Shift Details 1 Night
 Report Shift Details 2 Afternoon
 Report Shift Details 4 Evening
 Report Shift Details 5 Morning
+
+Remove Worker 111111111
