--- a/test2.in
+++ b/test2.in
@@ -4,32 +4,36 @@
 Report Workers
 
 # Add Workers
-Add Worker John 1111 21.20 Manager 7
-Add Worker Jane 2222 18.50 Cashier 5
-Add Worker Jack 3333 15.00 Waiter 6
-Add Worker Jack 3131 15.00 Waiter 6
-Add Worker Jack 3232 15.00 Waiter 6
-Add Worker Jack 3434 15.00 Waiter 6
-Add Worker Jack 3535 15.00 Waiter 6
-Add Worker Jack 3636 15.00 Waiter 6
-Add Worker Jack 3737 15.00 Waiter 6
-Add Worker Jill 4444 12.00 Dishwasher 2
-Add Worker Joe 5555 103.30 Bartender 4
-Add Worker Jim 6666 81.00 Chef 6
-Add Worker Jeff 7777 66.20 Chef 3
-Add Worker Jerry 7777 49.00 Busboy 1
-Add Worker Johnson 8888 121.30 Bartender 2
-Add Worker Moses 9999 20.00 Manager 5
-Add Worker Mary 1010 18.70 Cashier 4
-Add Worker Mark 1111 15.00 Waiter 6
-Add Worker Sarah 1212 12.30 Dishwasher 2
-Add Worker Eva 2121 103.30 Bartender 4
-Add Worker Sam 1313 66.20 Waiter 3
-Add Worker Sam 3232 103.30 Bartender 4
-Add Worker Steve 1414 81.00 Chef 6
-Add Worker Scott 1515 66.20 Waiter 3
-Add Worker Scott 3434 103.30 Bartender 4
-Add Worker David 1616 81.00 Waiter 6
+Add Worker Jack 3333 15.00 Waiter 99
+Add Worker John 11111 21.20 Manager 7
+Add Worker Jane 2222 18.50 sfads 5
+
+
+Report Workers
+
+#Add Worker Jack 3131 15.00 Waiter 6
+#Add Worker Jack 3232 15.00 Waiter 6
+#Add Worker Jack 3434 15.00 Waiter 6
+#Add Worker Jack 3535 15.00 Waiter 6
+#Add Worker Jack 3636 15.00 Waiter 6
+#Add Worker Jack 3737 15.00 Waiter 6
+#Add Worker Jill 4444 12.00 Dishwasher 2
+#Add Worker Joe 5555 103.30 Bartender 4
+#Add Worker Jim 6666 81.00 Chef 6
+#Add Worker Jeff 7777 66.20 Chef 3
+#Add Worker Jerry 7777 49.00 Busboy 1
+#Add Worker Johnson 8888 121.30 Bartender 2
+#Add Worker Moses 9999 20.00 Manager 5
+#Add Worker Mary 1010 18.70 Cashier 4
+#Add Worker Mark 1111 15.00 Waiter 6
+#Add Worker Sarah 1212 12.30 Dishwasher 2
+#Add Worker Eva 2121 103.30 Bartender 4
+#Add Worker Sam 1313 66.20 Waiter 3
+#Add Worker Sam 3232 103.30 Bartender 4
+#Add Worker Steve 1414 81.00 Chef 6
+#Add Worker Scott 1515 66.20 Waiter 3
+#Add Worker Scott 3434 103.30 Bartender 4
+#Add Worker David 1616 81.00 Waiter 6
 
 
 #Report Workers
